
syntax = "proto3";
option go_package = ".;proto";

import "google/api/annotations.proto";
import "common.proto";

service Chain {

    /** 
        Method: GetChainInfo 
        Input: Empty
        Response: message ChainInfoResponse
        Description: Returns the current chain information.
    */

    rpc GetChainInfo(Empty) returns (ChainInfo) {
        option (google.api.http) = {
            get: "/chain/chaininfo"
        };
    }

    /** 
        Method: GetRawBlock 
        Input: message BlockHash
        Response: message GetBlockRawResponse
        Description: Returns the raw block from a block hash.
    */

    rpc GetRawBlock(Hash) returns (Block) {
        option (google.api.http) = {
            get: "/chain/rawblock/{hash}"
        };
    }

    /** 
        Method: GetBlock 
        Input: message BlockHash
        Response: message GetBlockResponse
        Description: Returns the human readable block information from a block hash.
    */

    rpc GetBlock(Hash) returns (Block) {
        option (google.api.http) = {
            get: "/chain/block/{hash}"
        };
    }

    /** 
        Method: GetBlockHash 
        Input: message Number
        Response: message GetBlockHashResponse
        Description: Returns the hash string of the block at specified height
    */

    rpc GetBlockHash(Number) returns (Hash) {
        option (google.api.http) = {
            get: "/chain/blockhash/{number}"
        };
    }

     /** 
        Method: GetAccountInfo 
        Input: message Account
        Response: message AccountInfo
        Description: Returns the current account information
    */

    rpc GetAccountInfo(Account) returns (AccountInfo) {
        option (google.api.http) = {
            get: "/chain/account/{account}"
        };
    }

    /** 
        Method: GetTransaction 
        Input: message Account
        Response: message AccountInfo
        Description: Returns the current account information
    */

    rpc GetTransaction(Hash) returns (Tx) {
        option (google.api.http) = {
            get: "/chain/tx/{hash}"
        };
    }

    /** 
        Method: Sync 
        Input: message Hash
        Response: message RawData
        Description: Returns a stream of raw blocks from the block hash specified
    */

    rpc Sync(Hash) returns (stream RawData) {
        option (google.api.http) = {
            get: "/chain/sync/{hash}"
        };
    }

    /** 
        Method: Subscribe 
        Input: message SubscribeOptions
        Response: message BlockWithEpoch
        Description: Returns a stream to notify when new blocks arrive
    */

    rpc SubscribeBlocks(Empty) returns (stream RawData) {
        option (google.api.http) = {
            get: "/chain/subscribe/blocks"
        };
    }

     /** 
        Method: SubscribeTransactions 
        Input: message Account
        Response: message SubscribeResponse
        Description: Return a stream when an account is found on a transaction
    */

    rpc SubscribeTransactions(KeyPairs) returns (stream RawData) {
        option (google.api.http) = {
            post: "/chain/subscribe/account"
            body: "*"
        };
    }

    /** 
        Method: SubscribeValidatorTransactions 
        Input: message SubscribeValidatorRequest
        Response: message SubscribeResponse
        Description: Return a stream when validator pubkey is modified on the ValidatorRegistry
    */

    rpc SubscribeValidatorTransactions(KeyPairs) returns (stream RawData) {
        option (google.api.http) = {
            post: "/chain/subscribe/validator"
            body: "*"
        };
    }
}

message SubscribeValidatorRequest {
    repeated bytes public_key = 1;
}

message ChainInfo {
    string block_hash = 1;
    uint64 block_height = 2;
    ValidatorsInfo validators = 3;
}

message AccountInfo {
    string account = 1;
    Balance balance = 2;
    uint64 nonce = 3;
    repeated string txs = 4;
}




