syntax = "proto3";
option go_package = "github.com/olympus-protocol/ogen/proto";

message Empty{}

message Hash {
    string hash = 1;
}

message Number {
    uint64 number = 1;
}

message Success {
    bool success = 1;
    string error = 2;
    string data = 3;
}

message KeyPairs {
    repeated string keys = 1;
}

message KeyPair {
    string public = 1;
    string private = 2;
}

message RawData {
    string data = 1;
    string type = 2;
}

message Account {
    string account = 1;
}

message Tx {
    string hash = 1;
    uint32 type = 2;
    uint32 version = 3;
    TransferSingle transfer_single_payload = 4;
    TransferMulti transfer_multi_payload = 5;
}

message TransferSingle {
    string to = 1;
    string from_public_key = 2;
    uint64 amount = 3;
    uint64 nonce = 4;
    uint64 fee = 5;
    string signature = 6;
}

message TransferMulti {
    string to = 1;
    uint64 amount = 2;
    uint64 nonce = 3;
    uint64 fee = 4;
    string signature = 5;
}

message BlockHeader {
    uint32   version = 1;
    string  tx_merkle_root = 2;
    string  vote_merkle_root = 3;
    string  deposit_merkle_root = 4;
    string  exit_merkle_root = 5;
    string  vote_slashing_merkle_root = 6;
    string  randao_slashing_merkle_root = 7;
    string  proposer_slashing_merkle_root = 8;
    string  prev_block_hash = 9;
    uint64  timestamp = 10;
    uint64  slot = 11;
    string  state_root = 12;
    string  fee_address = 13;
}

message Block {
    string hash = 1;
    string raw_block = 2;
    BlockHeader header = 3;
    repeated string txs = 4;
    string signature = 5;
    string randao_signature = 6;
}

message ValidatorsRegistry {
    ValidatorsInfo info = 2;
    repeated ValidatorRegistry validators = 1;
}

message ValidatorRegistry {
    string balance = 1;
    string public_key = 2;
    string payee_address = 3;
    string status = 4;
    uint64 first_active_epoch = 5;
    uint64 last_active_epoch = 6;
}

message ValidatorsInfo {
    uint64 active = 1;
    uint64 pending_exit = 2;
    uint64 penalty_exit = 3;
    uint64 exited = 4;
    uint64 starting = 5;
}
